opam-version: "2.0"
maintainer:   "talex@gmail.com"
authors:      ["Thomas Leonard"]
license:      "BSD-2-Clause"
homepage:     "https://github.com/mirage/mirage-qubes"
bug-reports:  "https://github.com/mirage/mirage-qubes/issues"
dev-repo:     "git+https://github.com/mirage/mirage-qubes.git"
doc:          "https://mirage.github.io/mirage-qubes"

build: [
  [ "jbuilder" "subst" "-p" name] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "jbuilder"  {build & >="1.0+beta9"}
  "mirage-qubes" { >= "0.6" }
  "tcpip" { >= "3.5.0" }
  "ipaddr"
  "mirage-random"
  "mirage-clock"
  "mirage-protocols-lwt"
  "cstruct" { >= "1.9.0" }
  "lwt"
  "mirage-types-lwt" { >= "3.0.0" }
  "logs" { >= "0.5.0" }
  "ocaml" { >= "4.03.0" }
]
synopsis: "Implementations of IPv4 stack which reads configuration from QubesDB for MirageOS"