opam-version: "2.0"
maintainer:   "talex@gmail.com"
authors:      ["Thomas Leonard"]
license:      "BSD-2-Clause"
homepage:     "https://github.com/mirage/mirage-qubes"
bug-reports:  "https://github.com/mirage/mirage-qubes/issues"
dev-repo:     "git+https://github.com/mirage/mirage-qubes.git"
doc:          "https://mirage.github.io/mirage-qubes"

build: [
  [ "dune" "subst"] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune"  {>= "1.0"}
  "mirage-qubes" {= version}
  "tcpip" { >= "7.0.0" }
  "ethernet" {>= "3.0.0"}
  "arp" {>= "3.0.0"}
  "ipaddr" { >= "3.0.0" }
  "mirage-random" {>= "2.0.0"}
  "mirage-clock" {>= "3.0.0"}
  "cstruct" { >= "1.9.0" }
  "lwt"
  "logs" { >= "0.5.0" }
  "ocaml" { >= "4.06.0" }
]
synopsis: "Implementations of IPv4 stack which reads configuration from QubesDB for MirageOS"
