opam-version: "2.0"
maintainer:   "talex@gmail.com"
authors:      ["Thomas Leonard"]
homepage:     "https://github.com/mirage/mirage-qubes"
bug-reports:  "https://github.com/mirage/mirage-qubes/issues"
dev-repo:     "git+https://github.com/mirage/mirage-qubes.git"
doc:          "https://mirage.github.io/mirage-qubes"
license:      "BSD-2-Clause"

build: [
  [ "dune" "subst"] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune"  {>= "1.0"}
  "cstruct" { >= "6.0.0" }
  "vchan-xen" { >= "6.0.0" }
  "mirage-xen" { >= "6.0.0" }
  "lwt" { >= "5.7.0" }
  "logs" { >= "0.5.0" }
  "ocaml" { >= "4.08.0" }
  "ohex" { >= "0.2.0" }
  "fmt" {>= "0.8.5"}
]
synopsis: "Implementations of various Qubes protocols for MirageOS"
description: """
Implementations of various Qubes protocols:

- Qubes.RExec: provide services to other VMs
- Qubes.GUI: just enough of the GUI protocol so that Qubes accepts the AppVM
- Qubes.DB: read and write the VM's QubesDB database"""
